# rt

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile
include/rt/3d/: material.hpp  mesh.hpp  object.hpp  scene.hpp
include/rt/3d/camera/: camera.hpp  camera_controller.hpp
include/rt/3d/geometries/: cube.hpp  geometry.hpp  model.hpp  plane.hpp  quad.hpp  quadMesh.hpp  triangle.hpp
include/rt/3d/light/: light.hpp
include/rt/3d/materials/: blinnPhong.hpp  blinn_phong.hpp
include/rt/3d/scene/: scene.hpp
include/rt/engine/: engine.h  engine.hpp  engine_component.hpp  time_step.hpp
include/rt/glContext/: buffer.h  shader.h  window.h
include/rt/graphics/gl/: buffer.hpp  renderable.hpp  shader.hpp  shaderProgram.hpp  shader_program.hpp  texture.hpp  vertex.hpp  verticeBufferData.hpp
include/rt/graphics/primitives/: quad.hpp  triangle.hpp  vertex.hpp
include/rt/graphics/window/: window.hpp
include/rt/logger/: logger.h  logger.hpp
include/rt/object/: color.h  cube.h  material.h  mesh.h  quad.h  triangle.h  vertice.h
include/rt/resourceLoader/: resourceLoader.hpp
include/rt/resource_loader/: resource_loader.hpp
include/rt/utils/: file_handler.hpp  image.hpp  logger.hpp
resources/shaders/: blinn-phong.frag  blinn-phong.vert
resources/textures/: smiley.ppm
src/: CMakeLists.txt  main.cpp
src/3d/: CMakeLists.txt  material.cpp  mesh.cpp  scene.cpp
src/3d/camera/: CMakeLists.txt  camera.cpp  camera_controller.cpp
src/3d/geometries/: CMakeLists.txt  cube.cpp  model.cpp  plane.cpp  quad.cpp  quadMesh.cpp  triangle.cpp
src/3d/materials/: CMakeLists.txt  blinnPhong.cpp  blinn_phong.cpp
src/3d/object/: CMakeLists.txt  material.cpp  mesh.cpp  object.cpp
src/3d/scene/: CMakeLists.txt  material.cpp  scene.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/glContext/: CMakeLists.txt  buffer.cpp  buffer.h  renderable.h  shader.cpp  shader.h  verticeBufferData.cpp  verticeBufferData.h  window.cpp  window.h
src/graphics/: CMakeLists.txt
src/graphics/gl/: CMakeLists.txt  buffer.cpp  shader.cpp  shaderCompiler.cpp  shaderProgram.cpp  shader_program.cpp  texture.cpp  verticeBufferData.cpp
src/graphics/primitives/: CMakeLists.txt  quad.cpp  triangle.cpp
src/graphics/window/: CMakeLists.txt  window.cpp
src/logger/: CMakeLists.txt  logger.cpp  logger.h
src/object/: CMakeLists.txt  color.cpp  cube.cpp  cube.h  material.cpp  material.h  mesh.cpp  mesh.h  object3d.cpp  object3d.h  quad.cpp  quad.h  quadMesh.cpp  quadMesh.h  quadPrimitive.cpp  quadPrimitive.h  triangle.cpp  triangle.h  trianglePrimitive.cpp  trianglePrimitive.h
src/object/camera/: CMakeLists.txt  camera.cpp  camera.h
src/object/geometries/: CMakeLists.txt  cube.cpp  cube.h  quad.cpp  quad.h  quadMesh.h  triangle.cpp
src/object/light/: CMakeLists.txt
src/resourceLoader/: CMakeLists.txt  resourceLoader.cpp
src/resource_loader/: CMakeLists.txt  resource_loader.cpp
src/scene/: CMakeLists.txt  scene.cpp  scene.h
src/shaders/: CMakeLists.txt  shader.frag  shader.vert
src/utils/: CMakeLists.txt  fileHelper.cpp  fileHelper.h  file_handler.cpp  image.cpp  logger.cpp  logger.h
src/window/: CMakeLists.txt  window.cpp  window.h
